rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-ourlogs-OurlogsMessageProcessor-snuba-ourlogs__1__maximal_log.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"organization_id\": 69,\n  \"project_id\": 1,\n  \"trace_id\": \"3c8c20d5-0a54-4a1c-ba10-f76f574d856f\",\n  \"trace_flags\": 255,\n  \"span_id\": \"11002233AABBCCDD\",\n  \"severity_text\": \"WARNING\",\n  \"severity_number\": 1,\n  \"retention_days\": 90,\n  \"timestamp_nanos\": 1715868485371000,\n  \"observed_timestamp_nanos\": 1715868485371000,\n  \"body\": \"hello world!\",\n  \"attributes\": {\n    \"some.user.tag\": {\n      \"string_value\": \"hello\"\n    },\n    \"another.user.tag\": {\n      \"int_value\": 10\n    },\n    \"double.user.tag\": {\n      \"double_value\": -10.59\n    },\n    \"bool.user.tag\": {\n      \"bool_value\": true\n    }\n  }\n}\n"
expression: snapshot_payload
---
[
  {
    "attributes_bool": {
      "bool.user.tag": true
    },
    "attributes_float_14": {
      "sentry.timestamp_precise": "<item timestamp>"
    },
    "attributes_float_15": {
      "double.user.tag": -10.59
    },
    "attributes_float_24": {
      "bool.user.tag": 1.0
    },
    "attributes_float_35": {
      "another.user.tag": 10.0
    },
    "attributes_float_37": {
      "sentry.severity_number": 1.0
    },
    "attributes_int": {
      "another.user.tag": 10,
      "sentry.severity_number": 1,
      "sentry.timestamp_precise": "<item timestamp>"
    },
    "attributes_string_0": {
      "sentry.body": "hello world!"
    },
    "attributes_string_12": {
      "sentry.span_id": "11002233AABBCCDD"
    },
    "attributes_string_28": {
      "some.user.tag": "hello"
    },
    "attributes_string_35": {
      "sentry.severity_text": "WARNING"
    },
    "item_id": "<item ID>",
    "item_type": 3,
    "organization_id": 69,
    "project_id": 1,
    "retention_days": 90,
    "sampling_factor": 1.0,
    "sampling_weight": 1,
    "timestamp": 1715868,
    "trace_id": "3c8c20d5-0a54-4a1c-ba10-f76f574d856f"
  }
]
