rust_snuba/src/processors/snapshots/rust_snuba__processors__tests__schemas@snuba-ourlogs-OurlogsMessageProcessor-snuba-ourlogs__1__minimal_log.json.snap
---
source: src/processors/mod.rs
description: "{\n  \"organization_id\": 69,\n  \"project_id\": 1,\n  \"received\": 1715868485.381,\n  \"retention_days\": 90,\n  \"timestamp_nanos\": 1715868485371000,\n  \"observed_timestamp_nanos\": 1715868485371000,\n  \"body\": \"hello world!\"\n}\n"
expression: snapshot_payload
---
[
  {
    "attributes_bool": {},
    "attributes_float_14": {
      "sentry.timestamp_precise": "<item timestamp>"
    },
    "attributes_float_37": {
      "sentry.severity_number": 0.0
    },
    "attributes_int": {
      "sentry.severity_number": 0,
      "sentry.timestamp_precise": "<item timestamp>"
    },
    "attributes_string_0": {
      "sentry.body": "hello world!"
    },
    "attributes_string_35": {
      "sentry.severity_text": "INFO"
    },
    "item_id": "<item ID>",
    "item_type": 3,
    "organization_id": 69,
    "project_id": 1,
    "retention_days": 90,
    "sampling_factor": 1.0,
    "sampling_weight": 1,
    "timestamp": 1715868,
    "trace_id": "00000000-0000-0000-0000-000000000000"
  }
]
